# memory-neo

./: .env.example  ARCHITECTURE.md  DEPLOY.md  memIgnore  pyproject.toml  pytest.ini  requirements.api.txt  requirements.txt
.VSCodeCounter/2026-04-02_21-03-28/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-10_20-54-29/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.claude/: settings.local.json
api/: __init__.py  main.py
api/db/: __init__.py  prisma.py  schema.prisma
api/routes/: __init__.py  auth.py  context.py  nodes.py  push.py  query.py
api/services/: __init__.py  agent.py  auth.py  context_graph.py  email.py  graph.py  laboria_auth.py  nlp.py  otp.py
deploy/: api.Dockerfile  fly.api.toml  fly.memgraph.toml  init.cypher  memgraph.Dockerfile  memgraph_init_context.cypher
docs/: CONSUMERS.md  CONTEXT-API-SPEC.md  CONTEXT-ENDPOINTS-IMPLEMENTATION.md  CONTEXT-VALIDATION-DEPLOY.md  NODE-HANDSHAKE-RECONCILIATION.md  OWNERSHIP-CONTRACT.md  README.md
memory_neo/: __init__.py
memory_neo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memory_neo/cli/: __init__.py  context.py  login.py  main.py  push.py  query.py
memory_neo/core/: __init__.py  extractor.py  extractor_js.py  ignore.py  preflight.py  scanner.py
memory_neo/nlp/: __init__.py  formatter.py
tests/: conftest.py  test_context_index.py  test_context_query.py  test_context_unit.py  test_graph_guard.py  test_m2m_auth.py
(+3 files in other folders)
