# memory-neo/pyproject.toml
# Path: pyproject.toml
# Purpose: Build system + package metadata for pip install memory-neo

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-neo"
version = "0.1.4"
description = "Push your codebase to a graph DB and query it with natural language"
readme = "docs/README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "memory-neo" }]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pyperclip>=1.8",
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]

[project.scripts]
memory-neo = "memory_neo.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_neo*"]
